--- a/peluqueria-frontend/index.html
+++ b/peluqueria-frontend/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Web Peluquería Xtylo</title>
   </head>
-  <body>
-    <div id="root" class="flex flex-col min-h-screen"></div>
+  <body class="min-h-screen w-full">
+    <div id="root" class="w-full h-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-</html> 
+</html>
