--- a/peluqueria-frontend/index.html
+++ b/peluqueria-frontend/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Web Peluquería Xtylo</title>
-    <!-- Fuente Playfair Display de Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Fuentes de Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Dancing+Script&family=Lora&family=Great+Vibes&family=Alex+Brush&display=swap" rel="stylesheet">
   </head>
   <body class="min-h-screen w-full">
     <div id="root" class="w-full h-full"></div>
