--- a/peluqueria-frontend/index.html
+++ b/peluqueria-frontend/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Web Peluquería Xtylo</title>
     <!-- Fuentes de Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Dancing+Script&family=Lora&family=Great+Vibes&family=Alex+Brush&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Dancing+Script&family=Lora&family=Great+Vibes&family=Alex+Brush&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="min-h-screen w-full">
     <div id="root" class="w-full h-full"></div>
